Refactor DTOs, update logging levels, and enhance PickUp ID generation logic