@@ -3,10 +3,10 @@ package com.wastewise.pickup.service.impl;
 import com.wastewise.pickup.dto.CreatePickUpDto;
 import com.wastewise.pickup.dto.DeletePickUpResponseDto;
 import com.wastewise.pickup.dto.PickUpDto;
-import com.wastewise.pickup.model.enums.PickUpStatus;
 import com.wastewise.pickup.exception.InvalidPickUpRequestException;
 import com.wastewise.pickup.exception.PickUpNotFoundException;
 import com.wastewise.pickup.model.PickUp;
+import com.wastewise.pickup.model.enums.PickUpStatus;
 import com.wastewise.pickup.repository.PickUpRepository;
 import com.wastewise.pickup.service.PickUpService;
 import com.wastewise.pickup.utility.IdGenerator;
@@ -15,6 +15,9 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.Objects;
+import java.util.stream.Collectors;
+
 @Slf4j
 @Service
 public class PickUpServiceImpl implements PickUpService {
@@ -22,7 +25,6 @@ public class PickUpServiceImpl implements PickUpService {
     private final PickUpRepository repository;
     private final IdGenerator idGenerator;
 
-    // Enable mock mode for local testing
     private static final boolean MOCKMODE = true;
 
     public PickUpServiceImpl(PickUpRepository repository, IdGenerator idGenerator) {
@@ -35,115 +37,98 @@ public class PickUpServiceImpl implements PickUpService {
     public String createPickUp(CreatePickUpDto dto) {
         log.info("Received request to create PickUp: {}", dto);
 
-        if (dto.getTimeSlotEnd().isBefore(dto.getTimeSlotStart().plusMinutes(30))) {
-            throw new InvalidPickUpRequestException("End time must be at least 30 minutes after start time.");
-        }
+        // Validate the fields in the request
+        validateCreatePickUpDto(dto);
 
-        // --- Mock zone check ---
-        if (MOCKMODE) {
-            log.debug("MOCK: Zone {} validated", dto.getZoneId());
-        } else {
-            throw new UnsupportedOperationException("Zone validation requires remote service.");
-        }
+        // Generate a unique ID for the new PickUp
+        String pickUpId = idGenerator.generatePickUpId();
 
-        // --- Mock available vehicle ---
-        if (MOCKMODE) {
-            log.debug("MOCK: Vehicle {} validated", dto.getVehicleId());
-        } else {
-            throw new UnsupportedOperationException("Vehicle validation requires remote service.");
-        }
+        // Create a new PickUp object
+        PickUp pickUp = new PickUp();
+        pickUp.setId(pickUpId);
+        pickUp.setZoneId(dto.getZoneId());
+        pickUp.setTimeSlotStart(dto.getTimeSlotStart());
+        pickUp.setTimeSlotEnd(dto.getTimeSlotEnd());
+        pickUp.setFrequency(dto.getFrequency());
+        pickUp.setLocationName(dto.getLocationName());
+        pickUp.setVehicleId(dto.getVehicleId());
+        pickUp.setWorker1Id(dto.getWorker1Id());
+        pickUp.setWorker2Id(dto.getWorker2Id());
+        pickUp.setStatus(PickUpStatus.SCHEDULED);
 
-        // --- Mock available workers ---
-        if (MOCKMODE) {
-            if (dto.getWorker1Id().equals(dto.getWorker2Id())) {
-                throw new InvalidPickUpRequestException("Worker 1 and Worker 2 cannot be the same.");
-            }
-            log.debug("MOCK: Workers {} and {} validated", dto.getWorker1Id(), dto.getWorker2Id());
-        } else {
-            throw new UnsupportedOperationException("Worker validation requires remote service.");
-        }
-
-        // --- Save pickup ---
-        String newId = idGenerator.generatePickUpId();
-        PickUp pickUp = PickUp.builder()
-                .id(newId)
-                .zoneId(dto.getZoneId())
-                .timeSlotStart(dto.getTimeSlotStart())
-                .timeSlotEnd(dto.getTimeSlotEnd())
-                .frequency(dto.getFrequency())
-                .locationName(dto.getLocationName())
-                .vehicleId(dto.getVehicleId())
-                .worker1Id(dto.getWorker1Id())
-                .worker2Id(dto.getWorker2Id())
-                .status(PickUpStatus.SCHEDULED)
-                .build();
+        // Save the new pickUp to the repository
         repository.save(pickUp);
-        log.info("Persisted PickUp with ID: {}", newId);
 
-        // --- Mock logging & occupancy ---
-        if (MOCKMODE) {
-            log.debug("MOCK: Logged creation event and marked resources occupied.");
+        log.info("PickUp successfully created with ID: {}", pickUpId);
+        return pickUpId;
+    }
+
+    private void validateCreatePickUpDto(CreatePickUpDto dto) {
+        if (Objects.isNull(dto.getZoneId()) || dto.getZoneId().isEmpty()) {
+            throw new InvalidPickUpRequestException("Zone ID is required");
         }
-
-        return newId;
+        if (Objects.isNull(dto.getTimeSlotStart())) {
+            throw new InvalidPickUpRequestException("Time slot start is required");
+        }
+        if (Objects.isNull(dto.getTimeSlotEnd())) {
+            throw new InvalidPickUpRequestException("Time slot end is required");
+        }
+        if (Objects.isNull(dto.getLocationName()) || dto.getLocationName().isEmpty()) {
+            throw new InvalidPickUpRequestException("Location name is required");
+        }
+        // Additional validation can be added as per business requirements
     }
 
     @Override
     @Transactional
     public DeletePickUpResponseDto deletePickUp(String pickUpId) {
-        log.info("Received request to delete PickUp ID: {}", pickUpId);
+        log.info("Received request to delete PickUp with ID: {}", pickUpId);
 
-        PickUp existing = repository.findById(pickUpId)
-                .orElseThrow(() -> new PickUpNotFoundException(pickUpId));
+        // Find the PickUp by its ID
+        PickUp pickUp = repository.findById(pickUpId)
+                .orElseThrow(() -> new PickUpNotFoundException("PickUp not found with ID: " + pickUpId));
 
-        repository.delete(existing);
-        log.info("Deleted PickUp ID: {}", pickUpId);
+        // Delete the PickUp
+        repository.delete(pickUp);
 
-        if (MOCKMODE) {
-            log.debug("MOCK: Freed vehicle and workers, and logged deletion.");
-        }
-
+        log.info("PickUp successfully deleted with ID: {}", pickUpId);
         return new DeletePickUpResponseDto(pickUpId, "DELETED");
     }
 
     @Override
     public List<PickUpDto> listAllPickUps() {
-        log.info("Listing all PickUps");
-        List<PickUp> all = repository.findAll();
-        log.debug("Found {} pickups", all.size());
-        return all.stream()
-                .map(p -> PickUpDto.builder()
-                        .id(p.getId())
-                        .zoneId(p.getZoneId())
-                        .timeSlotStart(p.getTimeSlotStart())
-                        .timeSlotEnd(p.getTimeSlotEnd())
-                        .frequency(p.getFrequency())
-                        .locationName(p.getLocationName())
-                        .vehicleId(p.getVehicleId())
-                        .worker1Id(p.getWorker1Id())
-                        .worker2Id(p.getWorker2Id())
-                        .status(p.getStatus())
-                        .build())
-                        .toList();
+        log.info("Fetching all PickUps");
+
+        // Fetch all PickUp records and map them to DTOs
+        return repository.findAll().stream()
+                .map(this::mapToPickUpDto)
+                .collect(Collectors.toList());
     }
 
     @Override
     public PickUpDto getPickUpById(String pickUpId) {
-        log.info("Fetching PickUp by ID: {}", pickUpId);
-        PickUp p = repository.findById(pickUpId)
-                .orElseThrow(() -> new PickUpNotFoundException(pickUpId));
-        return PickUpDto.builder()
-                .id(p.getId())
-                .zoneId(p.getZoneId())
-                .timeSlotStart(p.getTimeSlotStart())
-                .timeSlotEnd(p.getTimeSlotEnd())
-                .frequency(p.getFrequency())
-                .locationName(p.getLocationName())
-                .vehicleId(p.getVehicleId())
-                .worker1Id(p.getWorker1Id())
-                .worker2Id(p.getWorker2Id())
-                .status(p.getStatus())
-                .build();
+        log.info("Fetching PickUp with ID: {}", pickUpId);
+
+        // Find the PickUp by its ID
+        PickUp pickUp = repository.findById(pickUpId)
+                .orElseThrow(() -> new PickUpNotFoundException("PickUp not found with ID: " + pickUpId));
+
+        // Map the PickUp to a DTO and return it
+        return mapToPickUpDto(pickUp);
     }
 
+    private PickUpDto mapToPickUpDto(PickUp pickUp) {
+        PickUpDto dto = new PickUpDto();
+        dto.setId(pickUp.getId());
+        dto.setZoneId(pickUp.getZoneId());
+        dto.setTimeSlotStart(pickUp.getTimeSlotStart());
+        dto.setTimeSlotEnd(pickUp.getTimeSlotEnd());
+        dto.setFrequency(pickUp.getFrequency());
+        dto.setLocationName(pickUp.getLocationName());
+        dto.setVehicleId(pickUp.getVehicleId());
+        dto.setWorker1Id(pickUp.getWorker1Id());
+        dto.setWorker2Id(pickUp.getWorker2Id());
+        dto.setStatus(pickUp.getStatus());
+        return dto;
+    }
 }
